# Snake-detector

./: .gitignore  CONTRIBUTING.md  DATASET_CARD.md  LICENSE  MODEL_CARD.md  README.md  ROADMAP.md  SECURITY.md  app.py  build_dataset.py  deployment_config.example.json  model.py  pyproject.toml  requirements.txt  savemodel.py  test_model.py  train_model.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  model_dataset_report.yml
.github/workflows/: ci.yml
app/: README.md  gradio_app.py  hf_bootstrap.py  requirements.txt
demo/hf_space/: README.md  app.py  deployment_config.hf.json  deployment_config.json  publish_to_hf_space.ps1  requirements.txt  run_local.ps1
docs/: attribution.md  collection_runs.md  dataset_and_license.md  dataset_sources.csv  deployment_decision.md  hf_space.md  real_image_collection.md
docs/assets/: README.md  before_after_repo.md  benchmark_table.md  confusion_matrix.md  demo_capture.md  sample_predictions.md
docs/releases/: v1.1.0-real-dataset.md
legacy/: README.md  build_dataset_legacy.py  model_legacy.py  savemodel_legacy.py  test_model_legacy.py  train_model_legacy.py
scripts/: collection_main_v1_01_collect.ps1  collection_main_v1_02_download.ps1  collection_main_v1_03_split_train_eval.ps1  threshold_sweep_val.py
src/snake_detector/: __init__.py  cli.py  collect.py  config.py  data.py  demo_data.py  (+5 more)
tests/: test_class_weights.py  test_cli.py  test_collect.py  test_config.py  test_demo_data.py  test_integration.py  test_preprocess.py  test_resolve_image_size.py  test_split_grouped.py  test_threshold.py
