[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-detector"
version = "0.1.0"
description = "Portfolio-grade snake vs non-snake image classification pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Matthew Maitland" }
]
dependencies = [
  "joblib>=1.4",
  "numpy>=1.26",
  "pillow>=10.0",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
ml = [
  "tensorflow>=2.16",
  "opencv-python>=4.9",
]
demo = [
  "gradio>=5.0",
]
dev = [
  "ruff>=0.11.0",
  "pytest>=8.2",
]

[project.scripts]
snake-detector = "snake_detector.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "legacy",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
